[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/interface/player/stats/bar_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/interface/hud.gd" type="Script" id=2]
[ext_resource path="res://scenes/interface/player/inventory/inventory_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/interface/player/inventory/equipament_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/interface/player/stats/stats_container.tscn" type="PackedScene" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InventoryContainer" parent="." instance=ExtResource( 3 )]

[node name="StatsContainer" parent="." groups=["stats_hud"] instance=ExtResource( 5 )]

[node name="BarContainer" parent="." instance=ExtResource( 1 )]

[node name="EquipamentContainer" parent="." groups=["equipment_container"] instance=ExtResource( 4 )]
